--- a/main.css
+++ b/main.css
@@ -107,3 +107,22 @@ body {
     transform: scale(40, 40);
   }
 }
+
+
+/* result page */
+
+.Items-container {
+  background-color: white;
+  border-radius: 12px;
+  padding: 15px;
+  display: grid;
+  grid-gap: 15px;
+  margin: 12px 300px;
+}
+
+.Item {
+  background-color: #f9f9f9;
+  border-radius: 12px;
+  max-height: 415px;
+  overflow: auto;
+}
