--- a/main.css
+++ b/main.css
@@ -111,18 +111,44 @@ body {
 
 /* result page */
 
+.Results-container {
+  background-color: #f5f5f5;
+  min-height: 92vh;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
+}
+
 .Items-container {
   background-color: white;
-  border-radius: 12px;
-  padding: 15px;
-  display: grid;
-  grid-gap: 15px;
-  margin: 12px 300px;
+  margin: 0 400px;
+  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+  border-radius: 4px;
 }
 
 .Item {
-  background-color: #f9f9f9;
-  border-radius: 12px;
-  max-height: 415px;
-  overflow: auto;
+  padding: 20px;
+  height: 200px;
+  border-bottom: 1px solid rgba(224, 224, 224, 1);
+  overflow: hidden;
+  position: relative;
+}
+
+.Item:after{
+  content: ' ';
+  display: block;
+  height: 20px;
+  width: 100%;
+  background-color: white;
+  position: absolute;
+  bottom: 0;
+}
+
+.ItemContent-container {
+  width: 60%;
+}
+
+.ItemContent-title {
+  padding-bottom: 13px;
+  font-weight: 700;
+  font-size: 18px;
 }
