--- a/css/result-page.css
+++ b/css/result-page.css
@@ -1,45 +1,38 @@
-.Results-container {
+.result-container {
   background-color: #f5f5f5;
   min-height: 100vh;
   padding-top: 4vh;
   padding-bottom: 4vh;
 }
 
-.Table {
+.list {
   background-color: white;
   margin: 0 400px;
   box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
   border-radius: 4px;
 }
 
-.Row {
+.listItem {
   padding: 20px;
   border-bottom: 1px solid rgba(224, 224, 224, 1);
 }
 
-.RowContainer-content {
-  display: flex;
-}
-
-
-.RowContainer-title {
+.listItem-title {
   padding-bottom: 13px;
   font-weight: 700;
   font-size: 18px;
 }
 
-.RowContainer-desc {
-  flex: 2;
-  height: 212px;
+.listItem-content {
   overflow: hidden;
-  padding-right: 50px;
+  height: 212px;
 }
 
-.RowContainer-img {
-  flex: 1;
-  background-image: url(assets/Berlin_Brandenburger_Tor_Abend.jpg);
+.container-img {
+  background-image: url(../assets/Berlin_Brandenburger_Tor_Abend.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
   margin: 5px;
+  height: 100%;
 }
